Chore: Fix broken scaler section layout on smaller screen (#791)

--- a/assets/sass/card.sass
+++ b/assets/sass/card.sass
@@ -12,6 +12,9 @@
 
   &-content
     flex: 1
+
+  &-is-wrapped
+    flex-wrap: wrap
   
   &.is-collapsible
     & + &
